--- a/style.css
+++ b/style.css
@@ -56,3 +56,16 @@ button{
 .input-field.error {
     border-color: red;
     }
+
+.flex-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center; 
+}
+
+#display-flex1{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 20;
+}
